--- a/src/styles.css
+++ b/src/styles.css
@@ -121,3 +121,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     border-radius: 50%;
     background: white;
 }
+
+
+/* Layout */
+
+.div-row {
+    display: flex;
+    flex-direction: row;
+}
+
+
